# POC_GOVERNANCE

./: .gitignore  pyproject.toml
demo/: demo_full.ipynb  text_protector.ipynb
poc_gdpr/config/: cfg.py  languages-config.yml  logger.py
poc_gdpr/src/: core.py  image_protector.py  text_protector.py
