[tool.poetry]
name = "poc-gdpr"
version = "0.1.0"
description = ""
authors = ["Iorio Luca <iorioluca97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
presidio-analyzer = "^2.2.358"
presidio-anonymizer = "^2.2.358"
mtcnn = "^1.0.0"
opencv-python = "^4.11.0.86"
pillow = "^11.2.1"
ipython = "^9.2.0"
transformers = "^4.51.3"
torch = "^2.7.0"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
